<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout"
        tools:context=".Profile">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/ic_person_black_24dp"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.10"
            app:layout_constraintHorizontal_bias="0.50"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/camera"
            android:background="@drawable/circular_background"
            android:src="@drawable/ic_photo_camera_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.27"
            app:layout_constraintHorizontal_bias="0.62"/>

        <EditText
            android:layout_width="160dp"
            android:id="@+id/usernameET"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45"
            app:layout_constraintHorizontal_bias="0.10"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <Button
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:id="@+id/usernameBT"
            android:text="@string/change_username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45"
            app:layout_constraintHorizontal_bias="0.97"/>

        <EditText
            android:layout_width="160dp"
            android:id="@+id/nameET"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55"
            app:layout_constraintHorizontal_bias="0.10"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <Button
            android:layout_width="165dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:id="@+id/nameBT"
            android:text="@string/change_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55"
            app:layout_constraintHorizontal_bias="0.97"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:id="@+id/password"
            android:textColor="#ffffff"
            android:text="@string/change_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/delete"
            android:background="@color/colorRed"
            android:textColor="#ffffff"
            android:text="@string/delete_your_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/profile_image_full"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_person_black_24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/profile_picture" />

</androidx.drawerlayout.widget.DrawerLayout>